--- a/Raport10_GitHub_cwiczenie.ipynb
+++ b/Raport10_GitHub_cwiczenie.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOcYH5IO+hr6dy1Rf2ooP+I",
+      "authorship_tag": "ABX9TyMx8zb6zsR68U8YIYnbpusI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!wget https://dq-content.s3.amazonaws.com/350/googleplaystore.csv -O google_wget.csv\n",
+        "!wget https://raw.githubusercontent.com/DrMichalWojcik/Raport10/refs/heads/main/googleplaystore.csv -O google_wget.csv\n",
         "!wget https://dq-content.s3.amazonaws.com/350/AppleStore.csv -O apple_wget.csv\n",
         "\n",
         "from csv import reader\n",
@@ -57,35 +57,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P82dK2m0a1td",
-        "outputId": "0ce4e9b9-4564-46a7-9d92-67f937c9f93c"
+        "outputId": "6908f386-4af4-4074-f16d-e53ce1d084c4"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-05-04 19:21:22--  https://dq-content.s3.amazonaws.com/350/googleplaystore.csv\n",
-            "Resolving dq-content.s3.amazonaws.com (dq-content.s3.amazonaws.com)... 52.217.237.9, 52.217.160.193, 52.217.34.20, ...\n",
-            "Connecting to dq-content.s3.amazonaws.com (dq-content.s3.amazonaws.com)|52.217.237.9|:443... connected.\n",
+            "--2025-05-13 11:41:13--  https://raw.githubusercontent.com/DrMichalWojcik/Raport10/refs/heads/main/googleplaystore.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 1349314 (1.3M) [text/csv]\n",
+            "Length: 1349314 (1.3M) [text/plain]\n",
             "Saving to: ‘google_wget.csv’\n",
             "\n",
-            "google_wget.csv     100%[===================>]   1.29M  8.47MB/s    in 0.2s    \n",
+            "google_wget.csv     100%[===================>]   1.29M  --.-KB/s    in 0.06s   \n",
             "\n",
-            "2025-05-04 19:21:22 (8.47 MB/s) - ‘google_wget.csv’ saved [1349314/1349314]\n",
+            "2025-05-13 11:41:14 (20.1 MB/s) - ‘google_wget.csv’ saved [1349314/1349314]\n",
             "\n",
-            "--2025-05-04 19:21:22--  https://dq-content.s3.amazonaws.com/350/AppleStore.csv\n",
-            "Resolving dq-content.s3.amazonaws.com (dq-content.s3.amazonaws.com)... 52.217.237.9, 52.217.160.193, 52.217.34.20, ...\n",
-            "Connecting to dq-content.s3.amazonaws.com (dq-content.s3.amazonaws.com)|52.217.237.9|:443... connected.\n",
+            "--2025-05-13 11:41:14--  https://dq-content.s3.amazonaws.com/350/AppleStore.csv\n",
+            "Resolving dq-content.s3.amazonaws.com (dq-content.s3.amazonaws.com)... 54.231.171.217, 52.216.211.17, 54.231.204.201, ...\n",
+            "Connecting to dq-content.s3.amazonaws.com (dq-content.s3.amazonaws.com)|54.231.171.217|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 725761 (709K) [text/csv]\n",
             "Saving to: ‘apple_wget.csv’\n",
             "\n",
             "apple_wget.csv      100%[===================>] 708.75K  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2025-05-04 19:21:23 (5.40 MB/s) - ‘apple_wget.csv’ saved [725761/725761]\n",
+            "2025-05-13 11:41:14 (6.34 MB/s) - ‘apple_wget.csv’ saved [725761/725761]\n",
             "\n"
           ]
         }
@@ -174,29 +174,25 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 298
         },
         "id": "K-YgE4KDWgWo",
-        "outputId": "6ae8bad2-eac8-47d2-fcd3-a61f79db4ef6"
+        "outputId": "01d09edb-4d04-4ae6-cb3b-24af44cebf99"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "google: True apple: True\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'free_google' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-5e75ad5a31dc>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     75\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mgoogle_OK\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mapple_OK\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 77\u001b[0;31m \u001b[0mverify_ready\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-2-5e75ad5a31dc>\u001b[0m in \u001b[0;36mverify_ready\u001b[0;34m()\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mverify_ready\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m   \u001b[0mgoogle_OK\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgoogle_ready\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mfree_google\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m   \u001b[0mapple_OK\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapple_ready\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mfree_apple\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"google:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgoogle_OK\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"apple:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapple_OK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'free_google' is not defined"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
         }
       ]
     },
@@ -215,32 +211,10 @@
         "explore_data(google, 0, 3, True)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3Csu1ffhaOtn",
-        "outputId": "fde96c7e-7bda-473c-99a7-ec500383a308"
+        "id": "3Csu1ffhaOtn"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['Photo Editor & Candy Camera & Grid & ScrapBook', 'ART_AND_DESIGN', '4.1', '159', '19M', '10,000+', 'Free', '0', 'Everyone', 'Art & Design', 'January 7, 2018', '1.0.0', '4.0.3 and up']\n",
-            "\n",
-            "\n",
-            "['Coloring book moana', 'ART_AND_DESIGN', '3.9', '967', '14M', '500,000+', 'Free', '0', 'Everyone', 'Art & Design;Pretend Play', 'January 15, 2018', '2.0.0', '4.0.3 and up']\n",
-            "\n",
-            "\n",
-            "['U Launcher Lite – FREE Live Cool Themes, Hide Apps', 'ART_AND_DESIGN', '4.7', '87510', '8.7M', '5,000,000+', 'Free', '0', 'Everyone', 'Art & Design', 'August 1, 2018', '1.2.4', '4.0.3 and up']\n",
-            "\n",
-            "\n",
-            "Number of rows: 10841\n",
-            "Number of columns: 13\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -340,35 +314,10 @@
         "verify_step13_2()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Duw1PQXRyy7p",
-        "outputId": "68759f6c-5ce9-4e27-ddf9-e9c75c089a07"
+        "id": "Duw1PQXRyy7p"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[('Navigation', 86090), ('Reference', 74942), ('Social Networking', 71548), ('Music', 57327), ('Weather', 52280), ('Book', 39758), ('Food & Drink', 33334), ('Finance', 31468), ('Photo & Video', 28442), ('Travel', 28244), ('Shopping', 26920), ('Health & Fitness', 23298), ('Sports', 23009), ('Games', 22789), ('News', 21248), ('Productivity', 21028), ('Utilities', 18684), ('Lifestyle', 16486), ('Entertainment', 14030), ('Business', 7491), ('Education', 7004), ('Catalogs', 4004), ('Medical', 612)]\n",
-            "\n",
-            "\n",
-            "[('COMMUNICATION', 38456119), ('VIDEO_PLAYERS', 24727872), ('SOCIAL', 23253652), ('PHOTOGRAPHY', 17840110), ('PRODUCTIVITY', 16787331), ('GAME', 15588016), ('TRAVEL_AND_LOCAL', 13984078), ('ENTERTAINMENT', 11640706), ('TOOLS', 10801391), ('NEWS_AND_MAGAZINES', 9549178), ('BOOKS_AND_REFERENCE', 8767812), ('SHOPPING', 7036877), ('PERSONALIZATION', 5201483), ('WEATHER', 5074486), ('HEALTH_AND_FITNESS', 4188822), ('MAPS_AND_NAVIGATION', 4056942), ('FAMILY', 3695642), ('SPORTS', 3638640), ('ART_AND_DESIGN', 1986335), ('FOOD_AND_DRINK', 1924898), ('EDUCATION', 1833495), ('BUSINESS', 1712290), ('LIFESTYLE', 1437816), ('FINANCE', 1387692), ('HOUSE_AND_HOME', 1331541), ('DATING', 854029), ('COMICS', 817657), ('AUTO_AND_VEHICLES', 647318), ('LIBRARIES_AND_DEMO', 638504), ('PARENTING', 542604), ('BEAUTY', 513152), ('EVENTS', 253542), ('MEDICAL', 120551)]\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 34
-        }
-      ]
+      "outputs": []
     }
   ]
 }
